--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="time_desc">The time that the task is due</string>
+    <string name="task_list_config">This is the config of the task list widget</string>
 </resources>
